--- a/_config.yml
+++ b/_config.yml
@@ -81,5 +81,5 @@ sitemap:
 ## Docs: https://hexo.io/docs/deployment.html
 deploy: 
   - type: git
-    repo: https://github.com/mafeifan/mafeifan.github.io
+    repo: git@github.com:mafeifan/mafeifan.github.io.git
     branch: master
